--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@ locateButton.onAdd = function(map) {
   return button;
 };
 locateButton.addTo(map);
+
+  //
+
+  fetch('https://raw.githubusercontent.com/ketikurban/peta-nanggroe/main/aceh_heritage_map.geojson')
+
 </script>
 
 </body>
