--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ locateButton.addTo(map);
 
   //
 
-  fetch('https://raw.githubusercontent.com/ketikurban/peta-nanggroe/main/aceh_heritage_map.geojson')
+  fetch('https://github.com/ketikurban/nanggroeaceh/blob/main/aceh_heritage_map.geojson')
 
 </script>
 
